<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.classconnect.activities.NewEventActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/eventNameWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_event_name"
        >

        <EditText
            android:id="@+id/etEventName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventNameWrapper"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/startDateWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_start_date"
            >

            <EditText
                android:id="@+id/etStartDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/startTimeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_start_time"
            >

            <EditText
                android:id="@+id/etStartTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="time"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llStart"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/endDateWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_end_date"
            >

            <EditText
                android:id="@+id/etEndDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/endTimeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_end_time"
            >

            <EditText
                android:id="@+id/etEndTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="time"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/notesWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llEnd"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_notes"
        >

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/locationWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/notesWrapper"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_location"
        >

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="showPlacePicker"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/locationWrapper"
        android:onClick="saveEvent"
        android:text="@string/label_save"
        />

</RelativeLayout>
